--- a/style.css
+++ b/style.css
@@ -17,6 +17,19 @@
     border: none;
     border-radius: 10px;
 }
+.child-Of-child-btn{
+    background-color: #7fa9f7;
+    border: none;
+    border-radius: 50px;
+    padding: 10px;
+    position: relative;
+    left: 30px;
+    bottom: 25px;
+}
+.child-img{
+    border: none;
+    border-radius: 15px;
+}
 
 
 /* ------------- Nav-Bar ------------- */
@@ -136,6 +149,7 @@ header{
     display: flex;
     justify-content: center;
     margin-top: 90px;
+    margin-bottom: 60px;
     gap: 20px;
 }
 .right-arrow{
@@ -148,6 +162,73 @@ header{
     height: 50px;
     width: 50px;
 }
+/* our stories section */
+.our-stories{
+    background-image: url(./assets/bg.png);
+    background-image: linear-gradient(white, rgb(247, 215, 156));
+}
+.stories-title{
+    font-size: 3.8rem;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.stories-child1{
+    background-color: white;
+    margin: 0;
+    border: none;
+    border-radius: 15px;
+    padding: 20px;
+}
+.child1-heading{
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+.date{ 
+    background-color: #7fa9f7;
+    border: none;
+    border-radius: 50px;
+    padding: 10px;
+    position: relative;
+    right: 500px;
+}
+/* here start stories child2 */
+.child-parent{
+    display: flex;
+    gap: 20px;
+}
+.child-of-child{
+    background-color: white;
+    margin: 0;
+    border: none;
+    border-radius: 15px;
+}
+.child-of-child{
+    padding: 10px;
+    margin: 10px;
+}
+
+.stories-parent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.view-btn{
+    background-color: black;
+    align-items: center;
+    margin-top: 70px;
+    height: 50px;
+    width: 120px;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+}
+
+
+
 
 
 
@@ -179,6 +260,14 @@ header{
         flex-direction: column;
         align-content: center;
         margin: 20px;
+    }
+    .stories-child1{
+        display: none;
+    }
+    .child-parent{
+        flex-direction: column;
+        margin: 0;
+        gap: 0;
     }
 
 }
